--- a/package.json
+++ b/package.json
@@ -46,25 +46,19 @@
     "date-fns": "4.1.0",
     "embla-carousel-react": "8.5.1",
     "framer-motion": "^12.5.0",
-    "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
-    "mongoose": "^8.12.1",
     "next": "15.1.0",
     "next-themes": "^0.4.4",
-    "nodemailer": "^6.10.0",
     "react": "^19",
     "react-day-picker": "8.10.1",
     "react-dom": "^19",
     "react-hook-form": "^7.54.2",
-    "react-hot-toast": "^2.5.2",
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.0",
     "sonner": "^1.7.4",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
-    "twilio": "^5.5.1",
-    "vaul": "^0.9.6",
-    "zod": "^3.24.2"
+    "vaul": "^0.9.6"
   },
   "devDependencies": {
     "@types/node": "^22",
